{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 135,
  "lineage": "bf0853d5-3d0f-f42d-9910-71ecd0f6090b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipnatgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01aa1b3dd11051dd1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-93-123.compute-1.amazonaws.com",
            "public_ip": "3.223.93.123",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:287992742175:instance/i-0254bfbfdbacfe294",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0254bfbfdbacfe294",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vasireddy22",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd00416a93624e7a",
            "private_dns": "ip-10-1-1-85.ec2.internal",
            "private_ip": "10.1.1.85",
            "public_dns": "ec2-3-236-42-245.compute-1.amazonaws.com",
            "public_ip": "3.236.42.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b468669510e53c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070869d6c93342a86",
            "tags": {
              "Env": "Prod",
              "Name": "publicServer-1"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "publicServer-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d69e9d5a5bb4e3e3"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:287992742175:instance/i-0f8d7b8c83ecff810",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8d7b8c83ecff810",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vasireddy22",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a436bf763732fd56",
            "private_dns": "ip-10-1-2-91.ec2.internal",
            "private_ip": "10.1.2.91",
            "public_dns": "ec2-52-201-226-129.compute-1.amazonaws.com",
            "public_ip": "52.201.226.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3773f75aae73cdc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c2541099930f587",
            "tags": {
              "Env": "Prod",
              "Name": "publicServer-2"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "publicServer-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d69e9d5a5bb4e3e3"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:287992742175:instance/i-0cd728067c1533ae2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd728067c1533ae2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vasireddy22",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0975840c3ebee8150",
            "private_dns": "ip-10-1-3-57.ec2.internal",
            "private_ip": "10.1.3.57",
            "public_dns": "ec2-50-16-56-238.compute-1.amazonaws.com",
            "public_ip": "50.16.56.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6aa4c605149ff7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c283ef3dff5ec7d",
            "tags": {
              "Env": "Prod",
              "Name": "publicServer-3"
            },
            "tags_all": {
              "Env": "Prod",
              "Name": "publicServer-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d69e9d5a5bb4e3e3"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:internet-gateway/igw-0b78a862a2cb17f2a",
            "id": "igw-0b78a862a2cb17f2a",
            "owner_id": "287992742175",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-02f9dc61ec025970c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01aa1b3dd11051dd1",
            "connectivity_type": "public",
            "id": "nat-095e43c4612ef8ff9",
            "network_interface_id": "eni-0259421c788f00a45",
            "private_ip": "10.1.1.73",
            "public_ip": "3.223.93.123",
            "subnet_id": "subnet-070869d6c93342a86"
          },
          "dependencies": [
            "aws_eip.eipnatgw",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:route-table/rtb-0f91862962b726195",
            "id": "rtb-0f91862962b726195",
            "owner_id": "287992742175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b78a862a2cb17f2a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f9dc61ec025970c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce1464cbb4ade9d3",
            "route_table_id": "rtb-0f91862962b726195",
            "subnet_id": "subnet-070869d6c93342a86"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f51f48817cde63c5",
            "route_table_id": "rtb-0f91862962b726195",
            "subnet_id": "subnet-07c2541099930f587"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093daca256b98d624",
            "route_table_id": "rtb-0f91862962b726195",
            "subnet_id": "subnet-07c283ef3dff5ec7d"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:security-group/sg-0d69e9d5a5bb4e3e3",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d69e9d5a5bb4e3e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "287992742175",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f9dc61ec025970c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:subnet/subnet-070869d6c93342a86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-070869d6c93342a86",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287992742175",
            "tags": {
              "Name": "terraform-aws-testing-public-Subnet-1"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-public-Subnet-1"
            },
            "vpc_id": "vpc-02f9dc61ec025970c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:subnet/subnet-07c2541099930f587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-07c2541099930f587",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287992742175",
            "tags": {
              "Name": "terraform-aws-testing-public-Subnet-2"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-public-Subnet-2"
            },
            "vpc_id": "vpc-02f9dc61ec025970c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:subnet/subnet-07c283ef3dff5ec7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-07c283ef3dff5ec7d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287992742175",
            "tags": {
              "Name": "terraform-aws-testing-public-Subnet-3"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-public-Subnet-3"
            },
            "vpc_id": "vpc-02f9dc61ec025970c"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287992742175:vpc/vpc-02f9dc61ec025970c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fbd26b81946b824a",
            "default_route_table_id": "rtb-0c1c1d530485dcb21",
            "default_security_group_id": "sg-05b64e11090ae7ad0",
            "dhcp_options_id": "dopt-0d87ce42226ab5633",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02f9dc61ec025970c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1c1d530485dcb21",
            "owner_id": "287992742175",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "Sree"
            },
            "tags_all": {
              "Name": "terraform-aws-testing",
              "Owner": "Sree"
            }
          }
        }
      ]
    }
  ]
}